--- Version 0.2.8 - Sep-09-2004
- override for require () to show install-packages dialog, if required package is not installed.
- Dialog to load/unload packages, update and install packages from CRAN
- added capability to cancel commands (not properly integrated in the GUI, yet)
- basic name checking for objects added or renamed by the user
- remove uneccessary blank are below menu in R-Console window
- fix R process busy/idle display
- show error message if loading workspace fails
- do not ask for save, if workspace is empty
- results of user-commands get printed if not invisible (i.e. just like in a regular R session)
- provide at least basic feedback on syntax errors
- added communication channel from R-backend to RKWard. Initial features:
	- checking for errors setting up the connection
	- simple rk.sync for synchronisation of objects modified in the R workspace
	- rk.get.tempfile.name for generation of a suitable temporary file (e.g. for storing images)
	- allows for in-place execution of commands or scheduling of commands in the regular stack
- auto addition of rows/columns when typing on last row/column
- allow deletion of rows without losing meta-data

--- Version 0.2.7 - Sep-02-2004
- several compilation fixes for KDE/Qt < 3.2.x (and maybe some new ones were introduced?)
- slight reorganization of menus
- added menu option to close all editor windows
- some improvements in the editing behavior for the table. Some quirks still present
- renamed windows
- fixed some typos
- set initial minimum sizes for object browser and object viewer windows
- don't show all windows on startup
- ask whether to save current workspace before loading a new one
- added command-line option to set, which components to show debug-messages for
- added option(s) to show/raise watch-window when new commands get displayed
- formula-widget handles multiple table situation correctly
- RKVarselector and RKObjectBrowser use a common base class for the list view